--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CARDIG Enrollment Form</title>
-
-  <!-- ensure relative links resolve for Pages -->
-  <base href="/enrollment-form/">
-
-  <!-- styles -->
-  <link rel="stylesheet" href="styles.css">
-
-  <!-- external libs (keep these before your app) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
 
@@ -32,7 +19,7 @@
 
     <!-- LEFT COLUMN: Forms -->
     <main class="main-content">
-      <!-- (entire HTML body content you provided — unchanged) -->
+      
       <!-- Section 1: General Info -->
       <section class="section-card">
         <h3 class="section-title">Primary Information</h3>
@@ -316,7 +303,11 @@
 
   </div>
 
-  <!-- Load app script -->
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
+  <!-- externalized app script (exact JS moved to app.js, no changes) -->
   <script src="app.js"></script>
 </body>
 </html>
