Add link to external stylesheet in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-
+<link rel="stylesheet" href="styles.css">
   <div class="app-container">
     
     <!-- Top Brand Header -->
